--- a/search_result.html
+++ b/search_result.html
@@ -273,7 +273,7 @@
             { keyword: "霸凌处分", label: "违纪处分通报-林泽川", page: "24霸凌处分.html" },
             { keyword: "霸凌", label: "违纪处分通报-林泽川", page: "24霸凌处分.html" },
             { keyword: "学生交响乐团", label: "活动室使用登记表", page: "28校交响乐团.html" },
-            { keyword: "长季酒店", label: "宁北市长宁酒店盛大开业", page: "30酒店开业.html" },
+            { keyword: "长季酒店", label: "宁北市长季酒店盛大开业", page: "30酒店开业.html" },
             { keyword: "长季酒店", label: "关于长季酒店意外坠楼事故的情况说明", page: "31酒店坠楼.html" },
             { keyword: "雨泽集团", label: "播客片段节选丨从单亲妈妈到集团总裁", page: "35播客节选.html" },
             { keyword: "宁北一高", label: "宁北一高智慧校园升级", page: "32门禁系统.html" },
