--- a/35播客节选.html
+++ b/35播客节选.html
@@ -182,13 +182,13 @@
 
                 <!-- 主持人问题3 - 斜体楷体 -->
                 <div class="host-question">
-                    <div class="speaker">雨泽集团CEO·江清</div>
+                    <div class="speaker">主持人</div>
                     <div class="text">（笑）您这算是把竞争心转移到了孩子们之间？</div>
                 </div>
 
                 <!-- 江清回答3 - 极简朴素，无竖杠 -->
                 <div class="guest-answer">
-                    <div class="speaker">江清</div>
+                    <div class="speaker">雨泽集团CEO·江清</div>
                     <div class="text">我不能让任何人有机会说，跟着妈妈的孩子就是不如跟着爸爸的。所以我对她要求高，我女儿必须优秀，这不是我狠心，是这个社会就这样，你不拿出点东西来，别人就会看低你。</div>
                 </div>
 
