--- a/29邮件.html
+++ b/29邮件.html
@@ -1601,7 +1601,7 @@
         });
 
         document.getElementById('accept-farrell').addEventListener('click', function() {
-            window.open = '结局判断.html';
+            window.open = ('结局判断.html', '_blank');
         });
 
         // 初始化页面
