--- a/结局判断.html
+++ b/结局判断.html
@@ -248,6 +248,11 @@
             <span id="current-time"></span>
         </div>
 
+        <div class="progress-corner">
+        <span>调查进度</span>
+        <span class="progress-value" id="progress-value">43/43</span>
+        </div>
+
         <!-- 主内容区 -->
         <div class="hero">
             <div class="judge-card">
