--- a/40榛子叶主页.html
+++ b/40榛子叶主页.html
@@ -280,7 +280,7 @@
 
     <div class="progress-corner">
         <span>调查进度</span>
-        <span class="progress-value" id="progress-value">extra/43</span>
+        <span class="progress-value" id="progress-value">41/43</span>
     </div>
 
     <script>
